--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "moment": "^2.22.0",
+    "protobufjs": "^6.8.6",
+    "request": "^2.85.0",
+    "request-promise": "^4.2.2"
   }
 }
