--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "moment": "^2.22.0",
     "protobufjs": "^6.8.6",
     "request": "^2.85.0",
     "request-promise": "^4.2.2"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
