--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
     "ejs": "^2.5.8",
     "express": "^4.16.3",
     "moment": "^2.22.0",
-    "protobufjs": "^6.8.6",
-    "request": "^2.85.0",
-    "request-promise": "^4.2.2"
+    "nyc-gtfs-utils": "0.0.5"
   },
   "scripts": {
     "start": "node index.js"
